--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Bicyle Shop</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    
+
   </body>
 </html>
